Clean up essays and shortcodes

--- a/content/2-present-practice/14.md
+++ b/content/2-present-practice/14.md
@@ -100,7 +100,7 @@ Lining was routine, and something of a go-to conservation treatment for damaged 
 
 Until the 1990s, starch-paste lining remained standard in the KHM Vienna, which is why we have almost no paintings with wax linings or synthetic materials.[^22] Since then, lining has been almost completely abandoned: from 1980 to 2000, fifty-two paintings were lined; from 2000 to 2020, only four paintings were lined. Conservators in a museum generally prefer a noninvasive approach. Whereas artworks in churches and private homes are often at the mercy of their surroundings, the controlled environmental conditions of museums protect works of art and slows their deterioration. If a conservator can monitor the conditions of a critical painting on a regular basis, treatments can frequently be postponed. This, however, requires a trained conservation staff and—apart from sufficient documentation—a good institutional memory. But a preference for fewer and less invasive treatments also means the skills to perform in-depth structural interventions are gradually lost.
 
-## Gottfried Libalt*, *Still Life with Bust of Archduke Leopold Wilhelm*: Structural Stabilization of an Unlined Seventeenth-Century Painting
+## Gottfried Libalt, *Still Life with Bust of Archduke Leopold Wilhelm*: Structural Stabilization of an Unlined Seventeenth-Century Painting
 
 Although lining was standard practice for centuries, quite a few canvas paintings remained unlined. One such is Gottfried Libalt’s *Still Life with a Bust of Archduke Leopold Wilhelm* (1660; 253 x 119 cm, GG 7795) ([fig. 14.6](#fig-14-6)). Over the years, the painting suffered a lot of structural damage: the tears in the original canvas measure 5 meters in total. In storage for centuries, its width was reduced by almost half when large parts of the composition were folded back.
 
@@ -138,9 +138,7 @@ Conservation of large paintings is teamwork, and many colleagues have contribute
 
 [^1]: More than a thousand (1,046) paintings in the collection are over 200 cm in at least one dimension.
 
-[^2]: A prominent example is Giorgione’s *Three Philosophers*, which is listed as stored and without strainer
-
-    (“ohne Blindrahm”) in the 1772 inventory.
+[^2]: A prominent example is Giorgione’s *Three Philosophers*, which is listed as stored and without strainer (“ohne Blindrahm”) in the 1772 inventory.
 
 [^3]: See https://www.khm.at/en/objectdb/detail/3392/?offset=0&lv=list.
 
