--- a/content/2-present-practice/9.md
+++ b/content/2-present-practice/9.md
@@ -169,9 +169,7 @@ The idea that the original canvas will never be the same again after a lining is
 
 [^1]: Acrylic adhesives are thermoplastic. Thus, gentle heat (about 50°C) is also sufficient to tackify the dry adhesive and create a bond.
 
-[^2]: European Confederation of Conservator-Restorers’ Organisations (E.C.C.O.),
-
-    “Professional Guidelines I: The Profession” (2002): https://www.ecco-eu.org/wp-content/uploads/2021/03/ECCO_professional_guidelines_I.pdf; “Professional Guidelines II: Code of Ethics” (2003): https://www.ecco-eu.org/wp-content/uploads/2021/03/ECCO_professional_guidelines_II.pdf.
+[^2]: European Confederation of Conservator-Restorers’ Organisations (E.C.C.O.), “Professional Guidelines I: The Profession” (2002): https://www.ecco-eu.org/wp-content/uploads/2021/03/ECCO_professional_guidelines_I.pdf; “Professional Guidelines II: Code of Ethics” (2003): https://www.ecco-eu.org/wp-content/uploads/2021/03/ECCO_professional_guidelines_II.pdf.
 
 [^3]: *Panorama Mesdag* project (1986–1996). The *Panorama* was painted by Hendrik Willem Mesdag and workshop in 1881; it is 14.70 m high x 114.70 m in circumference ([[van der Donk, de Herder, and van Lier 1996]]). See also Panorama Mesdag Geschiedenis en restauratie van een schilderij zonder grenzen: https://www.npo.nl/close-up/11-07-2015/AT_2037854. While not technically a mist lining, the Beva 371 lining adhesive was flocked and the heat-activated bond was set using a low-pressure envelope developed by Jos van Och. This remains the largest known painting lined (vertically) in situ.
 
