--- a/content/3-open-questions/16.md
+++ b/content/3-open-questions/16.md
@@ -52,7 +52,7 @@ The existing protocol for the zero-span tensile strength determination of paper 
 
 In order to apply this technology to yarn samples and use it as a standard method for the study of paintings, it was modified for this project. The basis for the study is provided by the standards listed in [table 16.1](#table-16-1), from which relevant aspects were adopted. The following criteria were developed:
 
-**table 'table-16-1'**
+**figure 'table-16-1'**
 
 -   Theoretically three different types of samples were conceivable: twisted yarns, untwisted yarns, and single fibers. However, in the case of twisted yarn premature damage of the sample can be excluded. In addition, for this configuration, a maximal correlation of the results with the strength of the canvas is expected.
 
@@ -74,7 +74,7 @@ In order to apply this technology to yarn samples and use it as a standard metho
 
 To develop the standard protocol, test measurements were conducted on a new fabric using the above criteria. The use of an identical fabric ensured the comparability of the different settings of the testing machine. The resulting standard protocol as outlined in [table 16.2](#table-16-2), which shows the final parameters that allowed us to fulfill our criteria.
 
-**table 'table-16-1'**
+**figure 'table-16-1'**
 
 For conducting a measurement for one canvas, the following steps were performed:
 
