--- a/content/3-open-questions/18.md
+++ b/content/3-open-questions/18.md
@@ -26,7 +26,7 @@ keywords: "lining, gacha, glue-paste, adhesive, documentation, experimentation"
 abstract: "A research project was carried out between 2011 and 2015 at the Complutense University of Madrid, the aim of which was to suggest improvements to guarantee future conservation of canvases lined with a glue-paste adhesive called *gacha*. We started with three objectives: documenting the origin of recipes and the different methods used for this treatment in Spain and Europe, as there is still little knowledge about this kind of lining; choosing case studies; and finally, carrying out a series of experimental tests to evaluate the performance of the basic materials in the recipes and of some variants in the textiles often used as lining supports."
 ---
 
-## **Introduction**
+## Introduction
 
 The proposal to carry out a research project on glue-paste linings arose during a course on structural treatments of paintings on canvas led by Vishwa Mehra and Matteo Rossi-Doria at the Universitat Politècnica de València. The scarcity of scientific knowledge about linings carried out in the past with glue paste (in Spanish, traditionally called *a la gacha*) was exacerbated by the gradual abandoning of this procedure, now replaced by modern synthetic adhesives.
 
@@ -50,11 +50,11 @@ In 1828, the Sala de Restauración at the Museo del Prado was created by royal d
 
 Among the aims of the project was to get a better understanding of the historical glue-paste recipes and methods of applying treatments. We then proposed using a sample recipe and making models and tests that would allow us to determine their possible efficiency and the process of deterioration—that is, to study and verify the present suitability of a reinforcement treatment that evolved over more than three hundred years in Europe, especially its suitability for paintings that were treated with this adhesive previously. We know that this method presents little toxicity, employs materials similar to and compatible with most paintings on canvas, and is reversible, inexpensive, and sustainable compared with modern synthetic adhesives, which have certain advantages but also disadvantages (some plastic materials need high temperature to activate the adhesive, for example). In addition, we wanted to use the experimental results to suggest improvements and guidelines for preventive conservation and future preservation of paintings lined in this way.
 
-The project was organized in three parts: a documentary work or study, an experimental study, and the sharing of the research as it was carried out ([fig. 18.2](#fig-18-2), [table 18.1](#table-18-1)).
+The project was organized in three parts: a documentary work or study, an experimental study, and the sharing of the research as it was carried out ([fig. 18.2](#fig-18-2-a), [table 18.1](#table-18-1)).
 
 {% figuregroup '3' 'fig-18-2-a, fig-18-2-b, fig-18-2-c' %}
 
-**table 'table-18-1'**
+**figure 'table-18-1'**
 
 ## Documentary Stage
 
@@ -88,15 +88,15 @@ Examples of case studies include:
 
 -   Ribera’s *Crucified Christ*, in the Diputación Foral de Álava.
 
--   Perovani’s *Portrait of George Washington*, in the Real Academia de Bellas Artes de San Fernando in Madrid, which was lined by Tomás Pérez, restorer at the Museo del Prado, in 1955 ([fig. 18.4](#fig-18-4)). For this painting, we also were able to locate the original 1955 gacha recipe, and to examine the state of the lining via cross sections ([fig. 18.5](#fig-18-5)).
-
-{% figure 'fig-18-4' %}
-
-{% figuregroup '2' 'fig-18-5-a, fig-18-5-b' %}
+-   Perovani’s *Portrait of George Washington*, in the Real Academia de Bellas Artes de San Fernando in Madrid, which was lined by Tomás Pérez, restorer at the Museo del Prado, in 1955 ([fig. 18.4](#fig-18-4)). For this painting, we also were able to locate the original 1955 gacha recipe, and to examine the state of the lining via cross sections ([fig. 18.5](#fig-18-5-a)).
 
 -   Murillo’s *Juan the Patrician’s Dream*, in the Museo del Prado.[^5]
 
 -   *The Spinners* and *Philip III on horseback* by Velázquez, in the Museo del Prado.
+
+{% figure 'fig-18-4' %}
+
+{% figuregroup '2' 'fig-18-5-a, fig-18-5-b' %}
 
 Both of the latter paintings have additional canvas strips to widen them. We know that *The Spinners* was lined 1785 by Jacinto Gómez, and perhaps he carried out the widening of the painting, although the painting’s measurements vary from one inventory to another at different periods, probably due to adaptations for specific locations. During the last intervention on the painting, many repaints were detected, covering damage that may have arisen from shrinkage when using a new close-weft canvas or been caused by burns during ironing ([[Macarrón, Calvo, and Gil 2017]]).
 
