--- a/content/4-case-studies/22.md
+++ b/content/4-case-studies/22.md
@@ -178,4 +178,4 @@ Mowiol and chalk mix filler at 25%: 240 g Mowiol GE 04-86, 1000 ml water, enou
 
 [^15]: <https://www.nationalgallery.org.uk/whats-on/artemisia-visits> and <https://www.nationalgallery.org.uk/about-us/press-and-media/press-releases/artemisia-visits-glasgow-womens-library>.
 
-[^16]: <https://www.nationalgallery.org.uk/exhibitions/past/artemisia>; see also [https://artuk.org/discover/stories/artemisia-an-interview-with-curator-letizia-treves](about:blank).
+[^16]: <https://www.nationalgallery.org.uk/exhibitions/past/artemisia>; see also https://artuk.org/discover/stories/artemisia-an-interview-with-curator-letizia-treves.
