--- a/content/4-case-studies/23.md
+++ b/content/4-case-studies/23.md
@@ -19,7 +19,7 @@ abstract: "*The Grand Panorama* *of a Whaling Voyage ’Round the World* is an 8
 
 ## Introduction
 
-*The Grand Panorama* *of a Whaling Voyage ’Round the World* is an 8 1/2 x 1,300 foot painting worked in distemper on cotton muslin ([fig. 23.1](#fig-23-1)). Completed in 1848, it was painted by Benjamin Russell and Caleb Pierce Purrington and begins in the busy harbor of New Bedford, Massachusetts, taking the viewer on a world tour highlighting the adventures and terrors of the nineteenth-century world of whaling. Designed to be a moving panorama, mounted on upright spools and attached to a structure that allowed it to be scrolled across a stage, it traveled the country and entertained audiences from the 1840s through the latter decades of the nineteenth century. In 1918, it was donated to the New Bedford Whaling Museum (NBWM) in New Bedford, Massachusetts, where various sections of it were temporarily exhibited throughout the twentieth century.
+*The Grand Panorama of a Whaling Voyage ’Round the World* is an 8 1/2 x 1,300 foot painting worked in distemper on cotton muslin ([fig. 23.1](#fig-23-1)). Completed in 1848, it was painted by Benjamin Russell and Caleb Pierce Purrington and begins in the busy harbor of New Bedford, Massachusetts, taking the viewer on a world tour highlighting the adventures and terrors of the nineteenth-century world of whaling. Designed to be a moving panorama, mounted on upright spools and attached to a structure that allowed it to be scrolled across a stage, it traveled the country and entertained audiences from the 1840s through the latter decades of the nineteenth century. In 1918, it was donated to the New Bedford Whaling Museum (NBWM) in New Bedford, Massachusetts, where various sections of it were temporarily exhibited throughout the twentieth century.
 
 {% figure 'fig-23-1' %}
 
