--- a/content/5-adhesives/27.md
+++ b/content/5-adhesives/27.md
@@ -100,7 +100,7 @@ The last solution proposed for canvas consolidation consists of polyelectrolyte-
 
 Solutions 1 and 2 were applied to degraded cotton canvases by spraying and brushing and solution 3 by spraying only. The amounts applied result in weight uptakes of the canvases between 1.8% and 22.1% ([table 27.1](#table-27-1)).
 
-**table 'table-27-1'**
+**figure 'table-27-1'**
 
 #### FEG-SEM
 
@@ -156,7 +156,7 @@ The response of samples to moisture was tested using DMA with RH-cycling. [Fig. 
 
 {% figure 'fig-27-3' %}
 
-**table 'table-27-2'**
+**figure 'table-27-2'**
 
 ### Testing on Historical Canvases
 
@@ -192,7 +192,7 @@ The CNF was produced from softwood pulp (\~75% pine and 25% spruce, containing 8
 
 The nanocomposites are made of a mixture of Tylose MH (methyl hydroxyethyl cellulose), purchased from Shin-Etsu Chemical Co. (Japan), and cellulose nanocrystals (CelluForce NCC), obtained from CelluForce. For the heptane-based MC+CNC, hydrophobic groups were introduced by silylation ({Böhme et al. 2020}). The deacidification agents consist of calcium carbonate and magnesium oxide particles of less than 1 µm.
 
-Other research details preparation of the SNPs ({Kolman et al. 2018}) and CaNPs ({Xu et al. 2020}) and their mixture ({Palladino et al. 2020}).
+Other research details preparation of the SNPs ([[Kolman et al. 2018]]) and CaNPs ([[Xu et al. 2020]]) and their mixture ([[Palladino et al. 2020]]).
 
 {% backmatter %}
 
