--- a/content/6-interventions/31.md
+++ b/content/6-interventions/31.md
@@ -172,6 +172,6 @@ As demonstrated in the case studies, the Gore-Tex sutures can be altered to suit
 
 {% endbackmatter %}
 
-[^1]: W. L. Gore & Associates. n.d. Gore Medical. Accessed March 29, 2022. [<https://www.goremedical.com/products/suture>.]{.underline}
+[^1]: W. L. Gore & Associates. n.d. Gore Medical. Accessed March 29, 2022. <https://www.goremedical.com/products/suture>
 
-[^2]: RH Conservation Engineering. 2017. [<http://www.rhconservationeng.com/>.]{.underline}
+[^2]: RH Conservation Engineering. 2017. <http://www.rhconservationeng.com/>
