--- a/content/6-interventions/34.md
+++ b/content/6-interventions/34.md
@@ -26,7 +26,7 @@ Leaving apart the most recent and better-known years, the first period I want to
 
 At the end of the conflict, it proved necessary to repair the damage caused by inappropriate and often inclement conservation conditions. Lists were drawn up indicating urgencies and priorities for restoration. Many works are mentioned several times in these lists, perhaps because they are still awaiting intervention. Documents requesting estimates and assessments for the acquisition of materials provide us with information on the techniques employed in these interventions.
 
-Among the most active restorers were without doubt the Podio family, originally from Bologna. We have at least a dozen documented linings executed by them, and most of these date from the 1950s ([fig. 34.1](#fig-34-1)) and are still effective as supports for the paintings.[^4] In their estimates, the Podio often indicate hemp as the lining textile used, but more importantly we note that they often repeated the operation they had just concluded with a second lining that involved a double or even a triple layer of glue paste, which would be filtered through the weave and the excess removed through the application of great pressure; the ironing operation, on the other hand, was not repeated.[^5] The result was a lining of great rigidity, and of high susceptibility to changes in humidity and temperature because of the amount of glue on the reverse.
+Among the most active restorers were without doubt the Podio family, originally from Bologna. We have at least a dozen documented linings executed by them, and most of these date from the 1950s ([fig. 34.1](#fig-34-1-a)) and are still effective as supports for the paintings.[^4] In their estimates, the Podio often indicate hemp as the lining textile used, but more importantly we note that they often repeated the operation they had just concluded with a second lining that involved a double or even a triple layer of glue paste, which would be filtered through the weave and the excess removed through the application of great pressure; the ironing operation, on the other hand, was not repeated.[^5] The result was a lining of great rigidity, and of high susceptibility to changes in humidity and temperature because of the amount of glue on the reverse.
 
 {% figuregroup '2' 'fig-34-1-a, fig-34-1-b' %}
 
@@ -44,7 +44,7 @@ One example of a painting with a nineteenth-century lining is the *Glory of Sain
 
 {% figure 'fig-34-2' %}
 
-Many restorations coincided with the acquisition of the painting, for example, Giordano Luca’s *Ritratto di capomasteo (Cratete)* (inventory 1254), lined by Luigi Bartolucci in 1898. The stretcher may have been preserved from a previous intervention but adapted to make place for keys. The lining canvas is coarse and thick, stained, and has a large seam*.* It is interesting to compare this canvas to those in use by painters at the same time: the same kind of canvas was used for Horace Vernet’s *Portrait of Filippo Agricola*, painted in the 1820s and never lined.
+Many restorations coincided with the acquisition of the painting, for example, Giordano Luca’s *Ritratto di capomasteo (Cratete)* (inventory 1254), lined by Luigi Bartolucci in 1898. The stretcher may have been preserved from a previous intervention but adapted to make place for keys. The lining canvas is coarse and thick, stained, and has a large seam. It is interesting to compare this canvas to those in use by painters at the same time: the same kind of canvas was used for Horace Vernet’s *Portrait of Filippo Agricola*, painted in the 1820s and never lined.
 
 During the nineteenth century (although less than during the eighteenth century), we find evidence of a desire for minimal intervention, both in mending of tears and in strip-linings. It was also Bartolucci who carried out the 1909 strip-lining of Cavallino’s *Saint Peter and the Centurion* (inventory 1485)*,* for which (according to his report) he “consolidated the old lining,” thus wisely preserving a lining dating to the end of the eighteenth century that was still functional. Another example is Guido Reni’s *Magdalen* (inventory1437) ([fig. 34.3](#fig-34-3)), which was never lined but has a very old strip-lining, surviving at least in the upper section.[^7]
 
