--- a/content/7-modern-contemporary/38.md
+++ b/content/7-modern-contemporary/38.md
@@ -79,7 +79,7 @@ Treating numerous similar damages one by one can be both labor intensive and exp
 
 As noted earlier, the current and widely adopted approach to structural repair of modern and contemporary paintings is one where a desire for local or minimal intervention meets a growing respect for authenticity. For example, there is perceived value in an unlined painting, with its original wooden auxiliary support and the verso of the canvas available for viewing. For eyes now accustomed to localized treatment of cracks or thread-by-thread tear mends, linings can appear heavy handed. The occasional request to remove old linings without replacing them does not always occur because the lining has failed. More often, the lining itself is viewed as an undesirable condition of the painting. The many types of values embraced by stakeholders—unblemished surface, stable condition, age-appropriate damage, retention of hidden original or authentic components, unease with evidence of past conservation—are often contradictory, if not actually mutually exclusive, and present thorny ethical dilemmas when discussing treatment.
 
-While minimal intervention and authenticity often complement one another in a treatment, that is not always the case. Removing a lining to reveal the original verso is not a minor treatment. Unstretching a painting to replace or modify an original sub-support that is inadequate or actively damaging the painting is not without risk and may end with an unsatisfactory compromise ([fig. 38.4](#fig-38-4)).
+While minimal intervention and authenticity often complement one another in a treatment, that is not always the case. Removing a lining to reveal the original verso is not a minor treatment. Unstretching a painting to replace or modify an original sub-support that is inadequate or actively damaging the painting is not without risk and may end with an unsatisfactory compromise ([fig. 38.4](#fig-38-4-a)).
 
 {% figuregroup '2' 'fig-38-4-a, fig-38-4-b' %}
 
