--- a/content/8-posters/50.md
+++ b/content/8-posters/50.md
@@ -41,7 +41,7 @@ Morita and Kuroe said that it was difficult to get gum elemi at that time in Jap
 
 Based on the recipes shown in [fig. 50.1](#fig-50-1), six formulas of the lining adhesives were prepared for experiments. As the test pieces, 10 cm square pieces of linen canvas faced with Japanese Tengujo paper on one side were prepared. They were impregnated with the recipes shown in [table 50.1](#table-50-1) from the fabric side and labeled A through F. On the reverse (uncovered) side, a 1 ml drop of mineral spirit was applied the drop covered with blotting paper, and a glass plate and weight were placed on top for 30 seconds. This operation was repeated fifteen times for each piece. After the solvent evaporated completely, the weight loss was measured and the removal amount and rate (percentage) of each sample were compared.
 
-**table 'table-50-1'**
+**figure 'table-50-1'**
 
 Ten test pieces were prepared for each adhesive (A–F), and half of them were subjected to artificial aging. The heat aging was carried out in the Espec LHU-113 Benchtop Temperature/Humidity Chamber at 55°C and 45% RH for 3 months. This aging condition was used by Gustav Berger in 1972 to test adhesives used in the consolidation of paintings. According to the reference, the heat aging at 55°C could keep the objects below the melting point (and possible critical deterioration point) of resins ([[Berger 1972b]]). The mean value of the removal rate for each recipe was calculated as follows:
 
