--- a/content/8-posters/59.md
+++ b/content/8-posters/59.md
@@ -98,7 +98,7 @@ The adhesive was chosen for suturing thread by thread: 10% starch paste and 20% 
 
 The second work was an oil painting on cotton cloth, dating from the twentieth century, whose motif is a still life. It is supported with a taffeta ligament, is industrially prepared, and measures 98 × 48.5 cm.
 
-Cotton fabric threads, 320 g/m² ([fig. 59.4]($fig-59-4)) were used, along with and 10% starch paste and 20% sturgeon glue in water (1:1) as adhesive for the textile intarsia. Because a water-based adhesive was used, small dots were applied to the ends of each thread. The tension of the new threads was 1 N/cm, and after the operation was completed, the treated area had a tension of 3.5 N/cm.
+Cotton fabric threads, 320 g/m² ([fig. 59.4](#fig-59-4)) were used, along with and 10% starch paste and 20% sturgeon glue in water (1:1) as adhesive for the textile intarsia. Because a water-based adhesive was used, small dots were applied to the ends of each thread. The tension of the new threads was 1 N/cm, and after the operation was completed, the treated area had a tension of 3.5 N/cm.
 
 {% figure 'fig-59-4' %}
 
