--- a/content/2-present-practice/13.md
+++ b/content/2-present-practice/13.md
@@ -130,9 +130,9 @@ The lining canvas had been cut to size so that it protruded where the original s
 
 ## Conclusion
 
-In *The Last Judgment*’s final state, the depiction is visible again, and further damage to the painting has been prevented ([fig. 13.7](#fig-13-7)). At the same time, the history of the painting and its technological peculiarities remain visible as some re-shapeable deformations were left. The tears were visually pushed back using restrained retouching. Despite the extensive intervention in the structure of the painting, it fits well into the cycle without making the other six less damaged, unrestored paintings look inferior.
+In *The Last Judgment*’s final state, the depiction is visible again, and further damage to the painting has been prevented ([fig. 13.7](#fig-13-7-a)). At the same time, the history of the painting and its technological peculiarities remain visible as some re-shapeable deformations were left. The tears were visually pushed back using restrained retouching. Despite the extensive intervention in the structure of the painting, it fits well into the cycle without making the other six less damaged, unrestored paintings look inferior.
 
-{% figuregroup '2' 'fig-13-7-a, fig-13-7-b' %} 
+{% figuregroup '2' 'fig-13-7-a, fig-13-7-b' %}
 
 The lining of a painting always represents a massive—often irreversible—intervention. However, the example of *The Last Judgement* shows that, in rare cases, a lining can be the only way to save a painting from further decay. In this case, lining did not mean abandoning the original stretching system and pressing the support as flat as a board. Even a more careful intervention with respect for the much-cited *Alterswert* (age value) can achieve the desired success.
 
@@ -160,9 +160,9 @@ We would like to thank the Stadtmuseum Wasserburg am Inn for its cooperation and
 
 [^5]: FTIR analysis performed by Dr. Thorsten Allscher at the Institut für Buch- und Handschriftenrestaurierung (IBR) at the Bayerische Staatsbibliothek.
 
-[^6]: “Formerly produced by Swiss Silk Bolting Cloth Manufacturing Co, Zurich. Stabiltex is a trademark for a sheer, lightweight, open weave, polyester fabric. Stabiltex was used as a support backing for covering fragile textiles and as an alternative to silk crepeline. As of 2004, the production of Stabiltex has been discontinued. An alternate product, Tetex TR was supplied as a replacement, but it was discontinued in 2009.” Source: <http://cameo.mfa.org/wiki/Stabiltex>. The Stabiltex we used was given to us by a colleague who still had some in stock.
+[^6]: “Formerly produced by Swiss Silk Bolting Cloth Manufacturing Co, Zurich. Stabiltex is a trademark for a sheer, lightweight, open weave, polyester fabric. Stabiltex was used as a support backing for covering fragile textiles and as an alternative to silk crepeline. As of 2004, the production of Stabiltex has been discontinued. An alternate product, Tetex TR was supplied as a replacement, but it was discontinued in 2009.” Source: http://cameo.mfa.org/wiki/Stabiltex. The Stabiltex we used was given to us by a colleague who still had some in stock.
 
-[^7]: “Finely dispersed, aqueous emulsion of a methacrylic acid ester-/acrylic acid ester-copolymer. The emulsion contains an anionic emulsifier system and is free from film forming auxiliary agents, solvents and plasticizers.” Source: <http://www.kremer-pigmente.com/media/pdf/76202e.pdf>. The product is no longer produced but is still commercially available through Kremer Pigmente.
+[^7]: “Finely dispersed, aqueous emulsion of a methacrylic acid ester-/acrylic acid ester-copolymer. The emulsion contains an anionic emulsifier system and is free from film forming auxiliary agents, solvents and plasticizers.” Source: http://www.kremer-pigmente.com/media/pdf/76202e.pdf. The product is no longer produced but is still commercially available through Kremer Pigmente.
 
 [^8]: Formerly named Plextol D 360 (consisting of n-butyl methacrylate and methyl acrylate). Kremer sells a substitute under the name Dispersion K 360 without giving specifications about the chemical composition other then it being a “aqueous dispersion of a thermoplastic acrylic polymer”: https://shop.kremerpigments.com/us/shop/mediums-binders-glues/76101-dispersion-k-360.html. However, it has a lower pH than Plextol D 360, and according to FTIR measurements it consists of poly butyl acrylate, polynitrile, and phthalate, thus containing a softener. See [[Reuber 2010\|, 36]]. The products we used were bought from Kremer Pigmente.
 
