--- a/content/5-adhesives/29.md
+++ b/content/5-adhesives/29.md
@@ -102,7 +102,7 @@ The following four water-based adhesives are some of the most promising on the b
 
 -   A mixture of sturgeon glue and Arbocel cellulose fibers, which consist of pure, lignin-free cellulose.
 
-**table 'table-29-1'**
+**figure 'table-29-1'**
 
 ### Experimental Setup
 
@@ -118,7 +118,7 @@ These four adhesives have been repeatedly tested over the past years.[^15] The a
 
 The uniaxially tested fabric strips were 12 threads wide, and each thread was mended individually. A comparatively large, reproducible overlap of 1 mm was selected for the test series. For butt joints, the two thread ends were positioned without any visible gap, as close as possible, for bonding. A uniform adhesive volume per thread (0.6 µm adhesive droplet) was used for bonding using a microdosage device. The bridging threads were coated with Beva 371 (25 µm film thickness) and attached after bonding by sealing, 10 mm to the left and 10 mm to the right of the bond, with no contact to the actual bond point in the middle. For the bridging threads, weft threads of the chosen test canvas were used. More material details can be seen in [table 29.2](#table-29-2).[^16]
 
-**table 'table-29-2'**
+**figure 'table-29-2'**
 
 ## Evaluation of Single-Thread Bonds
 
