--- a/content/4-case-studies/22.md
+++ b/content/4-case-studies/22.md
@@ -150,7 +150,7 @@ Mowiol and chalk mix filler at 25%: 240 g Mowiol GE 04-86, 1000 ml water, enou
 
 [^1]: The conservation treatment is described in a series of short films on the National Gallery website: <https://www.nationalgallery.org.uk/behind-the-scenes/restoring-artemisia>.
 
-[^2]: This paper complements contribution in this publication by [Paul Ackroyd](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/22-Harrison/paper-8), National Gallery, London.
+[^2]: This paper complements contribution in this publication by [Paul Ackroyd](/2-present-practice/8/), National Gallery, London.
 
 [^3]: The flattened right edge was to be retained in the current treatment.
 
