--- a/content/1-history/5.md
+++ b/content/1-history/5.md
@@ -105,9 +105,7 @@ The emphasis is therefore placed on a direct relationship between the guarantee 
 
 To great expertise in the practice of lining, Neapolitan liners added a profound knowledge of the materials of painting, which during the nineteenth century advised extreme caution in interventions. We have found evidence—both material and documentary—of interesting interventions in the case of two glue-tempera paintings: Parmigianino’s *Holy Family,* and Bertoja’s *Virgin and Child* ([figs. 5.4](#fig-5-4) and [5.5](#fig-5-5)), respectively) ([[Cardinali et al. 2002]]). Both interventions are notable in their sensitive attention to the behavior of the materials involved. In these two beautiful canvases, the rare qualities provided by the medium have been preserved thanks to the care taken, which ensured their good conservation, and which is still effective today.
 
-{% figure 'fig-5-4' %}
-
-{% figure 'fig-5-5' %}
+{% figuregroup '2' 'fig-5-4, fig-5-5' %}
 
 A document signed by the restorer Pasquale Chiariello dated September 6, 1899, lists the “lining works” he carried out in the National Museum of Naples. In the same list it is specified that the paintings defined as *guazzi* (glue-tempera paintings) “were only put behind glass and ‘conditioned’ in order to avoid further damage.”[^12]
 
