--- a/content/1-history/6.md
+++ b/content/1-history/6.md
@@ -71,17 +71,13 @@ The method employs an acrylic adhesive with the trade name A-45-K, which is a co
 
 One example is the lining support of the eighteenth century painting *Conclusions of Field Marshall General Count B. H. Minikh on the Seizure of Ochakov*” ([figs. 6.1a](#fig-6-1-a) and [6.1b](#fig-6-1-b)) ([[Iurovetskaia et al. 2019]]). Silk was used as a support ([fig. 6.2](#fig-6-2)), and the image layer combined oil, gold paint, and ink. Adhesive A-45-K dissolved in acetone was sprayed on the surface of the lining cloth ([fig. 6.3](#fig-6-3)) and after matching with the original support was activated locally by heat ([figs. 6.4a](#fig-6-4-a) and [6.4b](#fig-6-4-b)). Effective application of A-45-K for this art piece still has not led to widespread adoption of this technique among professional conservators because, since 2006, when this method was first introduced for lining the Mikhail Vrubel painting *Gwydon* on a sackcloth support, it has become increasingly complicated to buy the material from the manufacturers.
 
-{% figure 'fig-6-1-a' %}
-
-{% figure 'fig-6-1-b' %}
+{% figuregroup '2' 'fig-6-1-a, fig-6-1-b' %}
 
 {% figure 'fig-6-2' %}
 
 {% figure 'fig-6-3' %}
 
-{% figure 'fig-6-4-a' %}
-
-{% figure 'fig-6-4-b' %}
+{% figuregroup '2' 'fig-6-4-a, fig-6-4-b' %}
 
 Nowadays, restoration professionals in Russia often face difficulty accessing materials adapted for conservation purposes in our country and thus turn to reliable professional materials by internationally known suppliers. In this way, the conservation field in Russia is experiencing globalization, with all its challenges and opportunities, and mostly sticking to materials and techniques that are used worldwide. This certainly makes our work more comfortable, but it also eliminates distinctions between different conservation schools with their unique methods and approaches.
 
