add table placeholder

--- a/content/1-history/4.md
+++ b/content/1-history/4.md
@@ -151,7 +151,9 @@ The authors would like to thank the following persons and institutions. The Gett
 
 ## Appendix
 
-[**Table 4.1**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/4-Polkownik/table-4-1) lists the 17 paintings from the CIA and RMG collections that were examined by an expert panel for this study.
+[Table 4.1](#table-4-1) lists the 17 paintings from the CIA and RMG collections that were examined by an expert panel for this study.
+
+**figure 'table-4-1'**
 
 {% backmatter %}
 
